--- a/src/SemVer.Svn.MSBuild/SemVer.Svn.MSBuild.csproj
+++ b/src/SemVer.Svn.MSBuild/SemVer.Svn.MSBuild.csproj
@@ -13,7 +13,7 @@
     <Authors>dittodhole</Authors>
     <developmentDependency>true</developmentDependency>
     <PackageDescription>Versions your assemblies according to SemVer based on your SVN commit messages.</PackageDescription>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
     <PackageProjectUrl>https://github.com/dittodhole/dotnet-SemVer.Stamp</PackageProjectUrl>
     <PackageIcon>noun_60203_cc.png</PackageIcon>
     <PackageTags />
@@ -66,6 +66,10 @@
       <PackagePath>buildMultiTargeting</PackagePath>
     </None>
     <Compile Include="GetVersion.cs" />
+    <None Include="..\..\LICENSE.txt">
+      <Pack>true</Pack>
+      <PackagePath></PackagePath>
+    </None>
     <None Include="..\..\assets\noun_60203_cc.png">
       <Pack>true</Pack>
       <PackagePath></PackagePath>
